# localrag

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: .env  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 383b1c43ad3d_initial.py
backend/app/: config.py  main.py
backend/app/api/: admin.py  chat.py  documents.py  router.py  search.py
backend/app/models/: __init__.py  chat.py  document.py  persona.py  settings.py
backend/app/schemas/: chat.py  document.py  persona.py  search.py  settings.py
backend/app/services/: chat.py  document_processor.py  embedding.py  search.py
backend/app/services/llm/: azure_openai.py  base.py  factory.py  ollama.py
backend/app/utils/: chunking.py  text_extraction.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/admin/: DbQueryPanel.tsx  HealthPanel.tsx  PersonasPanel.tsx  SettingsPanel.tsx
frontend/src/components/documents/: DocumentList.tsx  FileUpload.tsx
frontend/src/components/layout/: AppShell.tsx  Header.tsx  Sidebar.tsx
frontend/src/hooks/: use-admin.ts  use-chat.ts  use-documents.ts  use-search.ts
frontend/src/pages/: Admin.tsx  Chat.tsx  DataManagement.tsx  Search.tsx
frontend/src/types/: index.ts
