[project]
name = "localrag-backend"
version = "0.1.0"
description = "Knowledge management backend with RAG capabilities"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "alembic>=1.14",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "PyMuPDF>=1.24",
    "sentence-transformers>=3.0",
    "httpx>=0.27",
    "openai>=1.40",
    "chardet>=5.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
